# kengpt

./: .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  cloudbuild.yml  docker-compose.yml  package-lock.json  package.json
api/: Dockerfile  gunicorn.conf.py  pyproject.toml
api/kengpt/: app.py  client.py  config.py
app/[locale]/: layout.tsx  page.tsx
app/[locale]/setup/: page.tsx
app/api/chat/azure/: route.ts
app/api/chat/openai/: route.ts
components/setup/: finish-step.tsx
components/ui/: brand.tsx
components/utility/: profile-settings.tsx
proxy/: nginx.conf
supabase/: config.toml
ui/: index.html  package.json
ui/src/: App.css  App.tsx  main.tsx  theme.ts
ui/src/api/: index.ts
ui/src/components/: ChatIntro.tsx  ChatItem.tsx  ExampleButton.tsx  Main.tsx
ui/src/context/: Context.tsx
ui/src/providers/: Provider.tsx
